@@ -194,6 +194,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1218234: Fix inspect.getsource() to load updated source of
+  reloaded module. Initial patch by Berker Peksag.
+
 - Issue #21740: Support wrapped callables in pydoc. Patch by Claudiu Popa.
 
 - Issue #23009: Make sure selectors.EpollSelecrtor.select() works when no
